--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "homepage": "https://BDPeppers.github.io/react-weather",
   "dependencies": {
-    "gh-pages": "^2.1.1",
+    "gh-pages": "^2.2.0",
     "greeting-time": "^1.0.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.0.1",
+    "node-sass": "^4.13.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.3.0",
     "time-alias": "0.0.5"
   },
   "scripts": {
